# fastapi_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: setup.yml
src/app/infrastructure/database/: database.py  uow.py
src/app/infrastructure/database/interfaces/uow/: uow.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/models/: __init__.py
src/app/main/: main.py  setup_exception_handlers.py
src/app/main/di/dependencies/: stub.py
src/app/main/di/providers/: core.py
src/app/main/exceptions/: setup_exception_handlers.py
src/app/presentators/api/: root_router.py
tests/: conftest.py  test_ping.py
