[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = []

[tool.ruff]
line-length = 79
src = ["src"]
indent-width = 4
target-version = "py312"
fix = true
exclude = [
    ".git",
    "migrations",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pychache__",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG002",
    "ANN",
    "D",
    "EM102",
    "TRY003",
    "PLR0913",
    "RUF001",
    "G004",
    "SIM112",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.mypy]
files = ["src"]
strict = true
python_version = "3.12"
ignore_missing_imports = true
install_types = true
non_interactive = true

disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.pytest.ini_options]
pythonpath = ". src"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python="^3.11"
pre-commit = "^3.4.0"
fastapi = "^0.103.1"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
httpx = "^0.25.1"
dishka = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
mypy = "^1.9.0"
